--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -79,7 +79,6 @@
     padding: 15px;
     background: #FFF;
     border-radius: 0;
-    margin-bottom: 15px;
     border-bottom: 1px solid #EEE;
 }
 
@@ -87,10 +86,12 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    font-size: 14px;
 }
 
 .AddressListPage .ui.selection.list > .item .address span {
     margin-right: 10px;
+    font-size: 14px;
 }
 
 .AddressListPage .ui.selection.list > .item .address {
@@ -108,6 +109,7 @@
 
 .AddressListPage .listControl .lnk > div {
     margin-left: 10px;
+    font-size: 14px;
 }
 
 .UserInfoPage .ui.list {
