--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -25,3 +25,39 @@
     justify-content: space-between;
     color: #999;
 }
+
+
+.messageDetail {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.messageDetail .tt{
+    font-size: 16px;
+    margin-bottom: 3px;
+    margin-top: 20px;
+}
+.messageDetail .time{
+    font-size: 12px;
+    color: #999;
+}
+.messageDetail .cont{
+    padding: 15px;
+    font-size: 16px;
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+}
+.addcommunityHotlnk{
+    position: fixed;
+    bottom: 70px;
+    right: 15px;
+    z-index: 100000;
+}
+i.addcommunityHotlnk.huge.icon{
+    opacity: .8;
+}
