--- a/app/public/css/head.css
+++ b/app/public/css/head.css
@@ -1,3 +1,6 @@
+*{
+    outline: none;
+}
 .ui.segment.headContent{
     background: #5694dd;
     border-radius: 0;
@@ -25,6 +28,8 @@
     padding: 0;
     margin: 0;
     padding-left: 15px;
+    font-size: 16px;
+    font-weight: 100;
 }
 .ui.segment.headContent .rightlnk button{
     padding:0;
@@ -32,8 +37,9 @@
 }
 .ui.segment.headContent .title {
     width: 50%;
-    font-size: 20px;
+    font-size: 18px;
     color: #FFF;
+    font-weight: 100;
     display: flex;
     align-items: center;
     justify-content: center;
