--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -1,9 +1,15 @@
 .myMessage{
     background: #F5F5F5;
+    display: flex;
+    flex-direction: column;
 }
 .messageList{
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    overflow: scroll;
+    align-items: stretch;
+    flex-shrink: 1;
 }
 .messageList .items{
     padding: 10px;
