--- a/app/public/css/pay.css
+++ b/app/public/css/pay.css
@@ -1,5 +1,54 @@
 .PayPage{
     background: #EEE;
+    overflow-y: scroll;
+    padding-top: 48px;
+}
+.PayPage .PageHead {
+    background: #5596d6;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 48px;
+    width: 100%;
+    z-index: 1000;
+}
+
+.PayPage .PageHead .title {
+    flex-grow: 1;
+    text-align: center;
+    line-height: 48px;
+    color: #FFF;
+    font-size: 16px;
+}
+
+.PayPage .PageHead .imgcont {
+    display: flex;
+    width: 50px;
+    position: absolute;
+    height: 100%;
+    right: 0;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.PayPage .PageHead .imgcont img {
+    width: 48px;
+}
+
+.PayPage .PageHead i.icon {
+    font-size: 30px;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 .PayPage .proinfo{
     margin-bottom: 20px;
