帖子头像尺寸

--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -40,7 +40,9 @@
 }
 
 .feedHead .label img {
-    border-radius: 50%
+    border-radius: 50%;
+    width: 44px;
+    align-self: flex-start;
 }
 
 .feedHead .summary {
