数据整理 ： 商城首页、商品详情、

--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -1,6 +1,8 @@
 .feedPage{
     width: 100%;
-    background: #EEE;
+    padding-bottom: 60px;
+    padding-top: 48px;
+    background: #FFF;
 }
 .commentlistcontent{
     background: #FFF;
