--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -1,17 +1,28 @@
+.root{
+
+}
 .pageStyle{
     display: flex;
     justify-content: space-between;
     padding: 0;
     font-weight: 100;
+    overflow: hidden;
+    flex-shrink: 1;
+    align-self: stretch;
+}
+.pageWamp >div{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 .homeBottom{
     display : flex;
-    position : fixed;
     justify-content: space-between;
     bottom: 0;
     width: 100%;
     background: #EEE;
     border-top: 1px solid #CCC;
+    flex-shrink: 0;
 }
 .homeBottom .ui.button{
     width: 33%;
