--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -65,7 +65,7 @@
   text-size-adjust: none;
 }
 
-ul {
+#scroller ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -73,7 +73,7 @@ ul {
   text-align: left;
 }
 
-li {
+#scroller ul li {
   padding: 0 10px;
   height: 40px;
   line-height: 40px;
