--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -2,14 +2,17 @@
     background: #F5F5F5;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .messageList{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    overflow: scroll;
+    overflow: visible;
     align-items: stretch;
     flex-shrink: 1;
+    position: relative;
+    overflow: hidden;
 }
 .messageList .items{
     padding: 10px;
@@ -35,12 +38,10 @@
 #wrapper {
   position: absolute;
   z-index: 1;
-  top: 45px;
-  bottom: 45px;
+  top: 0;
   left: 0;
   width: 100%;
-  background: #ccc;
-  overflow: hidden;
+  background: #CCC;
 }
 
 #scroller {
