--- a/app/src/components/controls/infinitecontrol.css
+++ b/app/src/components/controls/infinitecontrol.css
@@ -1,15 +1,65 @@
 #PullDown {
-    margin:0px;
-    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    height: 60px;
+}
+
+#PullDown {
+    margin: 0px;
     width: 100%;
     text-align: center;
     font-size: 15px;
     background-color: white;
-    line-height: 40px;
+    border-bottom: 1px solid #EEE;
+}
+
+#PullDown span {
+    width: 100px;
+}
+
+#PullDown img {
+    display: inline-block;
+    width: 32px;
+    transform: rotate(0deg);
+}
+
+#PullDown.transition img {
+    display: inline-block
+}
+
+#PullDown.transition img {
+    transform: rotate(180deg);
+    transition: transform .4s;
+    -moz-transition: transform .4s;
+    /* Firefox 4 */
+    -webkit-transition: transform .4s;
+    /* Safari and Chrome */
+    -o-transition: transform .4s;
+    /* Opera */
+}
+#PullDown.transitionload img {
+    transform: rotate(60000deg);
+    transition: transform 200s;
+    -moz-transition: transform 200s;
+    /* Firefox 4 */
+    -webkit-transition: transform 200s;
+    /* Safari and Chrome */
+    -o-transition: transform 200s;
+    /* Opera */
+}
+
+#PullDown.transitionend img {
+    width: 30px;
+    transform: rotate(0);
+}
+#PullDown.transitionend {
+    color: #21ba45;
 }
 
 #PullUp {
-    margin:0px;
+    margin: 0px;
     height: 40px;
     width: 100%;
     text-align: center;
@@ -19,24 +69,22 @@
 }
 
 #ListOutsite {
-    position:relative;
+    position: relative;
 }
 
 #ListInside {
     list-style: none;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     min-height: 150%;
 }
 
 #ListInside li {
-    height: 80px;
-    padding: 0 10%;
-    width: 80%;
+    width: 100%;
     vertical-align: middle;
-    line-height: 80px;
     font-size: 18px;
-    border: 1px solid lightsteelblue;
+    border-bottom: 1px solid #EEE;
     overflow: hidden;
-    background-color: blanchedalmond;
+    background: #FFFFFF;
+    padding: 10px 15px;
 }
