--- a/app/src/components/controls/infinitecontrol.css
+++ b/app/src/components/controls/infinitecontrol.css
@@ -72,6 +72,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: none;
 }
 #PullUp i{
     width: 30px;
