--- a/app/src/components/controls/infinitecontrol.css
+++ b/app/src/components/controls/infinitecontrol.css
@@ -8,7 +8,7 @@
     width: 100%;
     text-align: center;
     font-size: 15px;
-    background-color: white;
+    background-color: none;
     border-bottom: 1px solid #EEE;
 }
 
@@ -86,6 +86,9 @@
 }
 #PullUp span{
     width: 100px;
+}
+#PullUp.pageEnd i{
+    display: none;
 }
 #ListOutsite {
     position: relative;
