购物车数据更新

--- a/app/public/css/shopping.css
+++ b/app/public/css/shopping.css
@@ -83,11 +83,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background: #EEE;
 }
 .shoppingPage .proList .li{
     width: 49.5%;
     display: flex;
     flex-direction: column;
+    background: #FFF;
 }
 .shoppingPage .proList .li > img{
     width: 100%;
