--- a/app/public/css/addcartdilog.css
+++ b/app/public/css/addcartdilog.css
@@ -30,7 +30,7 @@
     backface-visibility: hidden;
     z-index: 5000;
     width: 100%;
-    background-color: #EFEFF4;
+    background-color: #FFF;
     -webkit-transition: -webkit-transform .3s;
     transition: -webkit-transform .3s;
     transition: transform .3s;
@@ -42,9 +42,60 @@
 }
 .addcartdilog .addcartdilogProinfo{
     display: flex;
+    padding: 20px;
+    border-bottom: 1px solid #EEE;
+}
+.addcartdilog .addcartdilogProinfo img{
+    width: 80px;
+    margin-right: 15px;
+    align-self: center;
+    border:1px solid #EEE;
+}
+.addcartdilog .addcartdilogProinfo div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.addcartdilog .addcartdilogProinfo div span:first-child{
+    font-size: 16px;
+}
+.addcartdilog .addcartdilogProinfo div span:last-child{
+    font-size: 18px;
 }
 .addcartdilog .setnumber{
+    display: flex;
+    justify-content: space-between;
+    padding:20px;
+    border-bottom: 1px solid #EEE;
+    align-items: center;
+}
+.addcartdilog .setnumber div {
+    display: flex;
+}
 
+.addcartdilog .setnumber div span{
+    height: 30px;
+    width: 30px;
+    border:1px solid #EEE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.addcartdilog .setnumber div span.input{
+    width: 50px;
+    border-left: none;
+    border-right: none;
+}
+.addcartdilog .setnumber span{
+    font-size: 16px;
+}
+.addcartdilog .addcartbtn{
+    text-align: center;
+    padding: 10px;
+    margin: 10px 20px;
+    background: #5596d6;
+    font-size: 16px;
+    color: #FFF;
 }
 
 
