--- a/app/public/css/shoppingproinfo.css
+++ b/app/public/css/shoppingproinfo.css
@@ -86,6 +86,12 @@
 
 .ProinfoPage .proinfoHead .p1 {
     display: flex;
+    flex-grow: 1
+}
+.ProinfoPage .proinfoHead .p1 >div{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1
 }
 
 .ProinfoPage .proinfoHead .p2 {
