--- a/app/public/css/myprofile.css
+++ b/app/public/css/myprofile.css
@@ -21,6 +21,7 @@
 .myProfilePage .userInfo img.avatar{
     border-radius: 50%;
     width: 80px;
+    height: 80px;
     border:3px solid #FFF;
     margin-bottom: 5px;
 }
