--- a/app/public/css/myorder.css
+++ b/app/public/css/myorder.css
@@ -1,10 +1,32 @@
 .myOrder {
     background: #F5F5F5;
+    overflow: hidden;
+}
+.myOrder .actionItem{
+    display: flex;
+    width: 100%;
+    overflow-x: scroll;
+    margin-bottom: 10px;
+    position: relative;
+    z-index: 1000;
+    background: #FFF;
+}
+.myOrder .actionItem span{
+    line-height: 40px;
+    padding: 0 10px;
+    flex-shrink: 0;
+    flex-grow: 1;
+    text-align: center;
+    font-size: 14px;
+}
+.myOrder .actionItem span.sel{
+    color: #5694dd
 }
 
 .myOrder .ui.secondary.pointing.menu{
     width: 100%;
-    overflow-x: scroll;
+    position: relative;
+    z-index:1000;
 }
 .myOrder .ui.secondary.pointing.menu .item {
     flex-grow: 1;
@@ -16,7 +38,7 @@
 
 .myOrder .ui.secondary.pointing.menu {
     margin: 0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .myOrder .ui.secondary.pointing.menu .active.item, .ui.secondary.pointing.menu .active.item:hover {
