--- a/app/public/css/shoppingproinfo.css
+++ b/app/public/css/shoppingproinfo.css
@@ -117,6 +117,9 @@
     flex-direction: column;
     align-items: center;
 }
+.ProinfoPage .proinfoHead .collectionLnk span{
+    flex:1;
+}
 
 .ProinfoPage .proinfoHead .collectionLnk img {
     width: 30px;
