--- a/app/public/css/distribution.css
+++ b/app/public/css/distribution.css
@@ -44,19 +44,24 @@
     border-bottom: 1px solid #EEE
 }
 
+.distributionPage .ui.secondary.pointing.menu .item{
+    border: none;
+}
+
 .distributionPage .ui.secondary.pointing.menu .item {
     flex-grow: 1;
     justify-content: center;
     margin: 0;
-    line-height: 20px;
     font-weight: 100;
+    height: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .distributionPage .ui.secondary.pointing.menu .item.active {
     border: none;
     color: #5694dd;
     margin: 0;
-    line-height: 20px;
     font-weight: 100;
 }
 
@@ -110,6 +115,7 @@
     border-top: 1px solid #EEE;
     background: #EEE;
     padding: 5px 20%;
+    flex-shrink: 0;
 }
 
 .bottomBttn span{
