--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -331,8 +331,8 @@
     display: flex;
     align-items: stretch;
     justify-content: space-between;
-    overflow: scroll;
     flex-direction: column;
+    overflow:hidden;
 } 
 .feedPage .tc > div{
     width: 100%
